<resources>
    <string name="app_name">Calculator</string>
    <string name="x">X</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="ac">AC</string>
    <string name="aa">+/-</string>
    <string name="ab">%</string>
    <string name="ad">/</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="ae">-</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="af">.</string>
    <string name="ag">=</string>
    <string name="ah">+</string>
    <string name="_00">0</string>
</resources>